--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash.sample": "^4.2.1",
     "lodash.shuffle": "^4.2.0",
     "lodash.startcase": "^4.4.0",
+    "lodash.upperfirst": "^4.3.1",
     "node-emoji": "^1.5.1",
     "roll": "^1.2.0",
     "word-wrap": "^1.2.2"
