--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "node": "6.10.2"
   },
   "scripts": {
+    "lint": "eslint \"**/*.{js,jsx}\"",
+    "lint:fix": "npm run lint -- --fix",
     "tag": "mc-tag",
-    "lint": "eslint --fix \"**/*.{js,jsx}\""
+    "test": "mc-test",
+    "test:debug": "mc-test --browsers Chrome",
+    "test:watch": "mc-test --watch"
   },
   "repository": {
     "type": "git",
@@ -32,13 +36,14 @@
     "lodash.shuffle": "^4.2.0",
     "lodash.startcase": "^4.4.0",
     "lodash.upperfirst": "^4.3.1",
-    "node-emoji": "^1.5.1",
+    "node-emoji": "^1.8.1",
     "roll": "^1.2.0",
-    "word-wrap": "^1.2.2"
+    "word-wrap": "^1.2.3"
   },
   "devDependencies": {
     "@salesforce-mc/devscripts": "^3.2.0",
-    "@salesforce-mc/eslint-config-sfmc": "^2.1.1",
+    "@salesforce-mc/devtest": "^4.1.0",
+    "@salesforce-mc/eslint-config-sfmc": "^3.0.1",
     "prompt": "^1.0.0"
   }
 }
