--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash.shuffle": "^4.2.0",
     "lodash.startcase": "^4.4.0",
     "lodash.upperfirst": "^4.3.1",
+    "moment": "^2.19.2",
     "node-emoji": "^1.8.1",
     "roll": "^1.2.0",
     "word-wrap": "^1.2.3"
