--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     }
   ],
   "engines": {
-    "node": "6.10.2"
+    "node": "8.x",
+    "npm": "5.x"
   },
   "scripts": {
     "lint": "eslint \"**/*.{js,jsx}\"",
