--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash.sample": "^4.2.1",
     "lodash.shuffle": "^4.2.0",
     "lodash.startcase": "^4.4.0",
+    "lodash.throttle": "^4.1.1",
     "lodash.upperfirst": "^4.3.1",
     "moment": "^2.19.2",
     "node-emoji": "^1.8.1",
