--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "event-emitter-es6": "^1.1.5",
     "fantasy-names": "^1.1.2",
     "grab-color-names": "^1.1.2",
+    "lodash.find": "^4.6.0",
     "lodash.foreach": "^4.5.0",
     "lodash.random": "^3.2.0",
     "lodash.reduce": "^4.6.0",
