--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "npm": "5.x"
   },
   "scripts": {
-    "build": "node ./helpers/card-probabilities.js",
+    "build": "node ./build.js",
     "lint": "eslint \"**/*.{js,jsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "make-notes": "mc-make-notes",
